force-app/main/default/objects/Quickbook_Invoice_Item__c/Quickbook_Invoice_Item__c.object-meta.xml
<CustomObject>
    <description>These are the items linked to the invoice to be billed</description>
    <label>Quickbook Invoice Item</label>
    <nameField>
        <displayFormat>QBII-{000000}</displayFormat>
        <label>Quickbook Invoice Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quickbook Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>