force-app/main/default/objects/Quickbook_Invoice_Item__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF( Discount_Amount__c = null, (Rate__c * Quantity__c) * Discount_Percent__c , (Rate__c * Quantity__c) - Discount_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>