force-app/main/default/objects/Quickbook_Invoice_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quickbook Invoice Items</relationshipLabel>
    <relationshipName>Quickbook_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>