force-app/main/default/objects/Quickbook_Invoice_Item__c/fields/Quickbooks_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Invoice__c</fullName>
    <label>Quickbooks Invoice</label>
    <referenceTo>Quickbooks_Invoice__c</referenceTo>
    <relationshipLabel>Quickbook Invoice Items</relationshipLabel>
    <relationshipName>Quickbook_Invoice_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>