force-app/main/default/objects/Quickbook_Invoice_Item__c/fields/Service_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Service_Datetime__c</fullName>
    <label>Service Datetime</label>
    <type>DateTime</type>
</CustomField>